    * `fs->nactvar` is explicitly set to `bl->nactvar`, since the call to removevars no longer does this implicitly.
    * Added logic for creating the block expression
    * Setting `fs->freereg` to `bl->freereg` instead of `fs->nactvar`, in accordance with previous changes.
  * Added function `eindex`, similar to `yindex`, for indexing with `()`: This is used when handling `table.(key)`
  * `body`: changed grammar from `(parlist) chunk END` to `[parlist](chunk)`
  * `explist1`: If a block is the last expression, place all block results on stack, adjusting number of expressions accordingly.
  * `funcargs`:
    * Removed ability to call functions without parentheses to increase clarity and consistency of code.
    * Added logic: If a block is the last expression in the arguments list, do not add its results to the stack, since they are already there.
  * `prefixexp`:
    * Sub-expression `( expr )` changed to `( chunk )`. This is where block expressions start.
    * Added while loop expression `? cond -> (chunk)`. This is also a block expression, but it behaves differently (see `leaveblock`).
  * `primaryexp`:
    * Added return `^` and break `^^` as primary expressions. They are both of type void, so they have no value. Since they interrupt control flow, their values would never be used anyway.
    * Changed indexing from `table[key]` to `table.(key)`, adding logic to distinguish from field access (e.g. `table.field`)
    * Removed ability to call functions without parentheses to increase clarity and consistency of code.
  * `simpleexp`:
    * Changed nil expression from `TK_NIL` to '~'
    * Removed true and false expressions
    * Changed function expression from `TK_FUNCTION (funcargs) chunk END` to `[funcargs] (chunk)`
  * `getunopr`:
    * Changed not operator from `TK_NOT` to '!'
  * `getbinopr`:
    * Changed and operator from `TK_AND` to `&`
    * Changed or operator from `TK_OR` to `|`