@@ -309,7 +309,10 @@ int luaK_blockresults2regs(FuncState *fs, expdesc *e, int nresults) {
     n = e->u.s.aux - e->u.s.info; // set number of results to number of values available
     if (n <= 0) {
       e->u.s.aux = e->u.s.info; // enforce end condition
-      n = 1;
+      // blocks with no value evaluate to true
+      luaK_codeABC(fs, OP_LOADBOOL, fs->freereg, 1, 0);
+      luaK_reserveregs(fs, 1);
+      return 1;
     }
   } else if (nresults <= 0) {
     return 0;
@@ -320,8 +323,12 @@ int luaK_blockresults2regs(FuncState *fs, expdesc *e, int nresults) {
     int sourcereg = e->u.s.info + i;
     int targetreg = fs->freereg + i;
     if (sourcereg >= e->u.s.aux) { // there are no more value to return, so fill rest with nil
-      // printf("nil from blockresults2regs\n");
-      luaK_nil(fs, targetreg, n-i);
+      if (i == 0) { // first result is true if block has no value
+        luaK_codeABC(fs, OP_LOADBOOL, targetreg, 1, 0);
+        i++;
+        if ((n-i) > 0) luaK_nil(fs, targetreg+1, n-i);
+      } else 
+        luaK_nil(fs, targetreg, n-i);
       break;
     } else if (sourcereg != targetreg) {
       // printf("move in blockresults2regs\n");
@@ -408,14 +415,13 @@ static void discharge2reg (FuncState *fs, expdesc *e, int reg) {
       break;
     }
     case VBLOCK: {
-      // if there is at least one returned value, then try to move the value there, otherwise push nil
+      // if there is at least one returned value, then try to move the value there, otherwise push true
       if (e->u.s.info < e->u.s.aux) {
         // if desired register and start of block return values are not the same, then move the value
         // printf("move in discharge2reg\n");
         if (reg != e->u.s.info) luaK_codeABC(fs, OP_MOVE, reg, e->u.s.info, 0);
       } else {
-        // printf("nil from discharge2reg\n");
-        luaK_nil(fs, reg, 1);
+        luaK_codeABC(fs, OP_LOADBOOL, reg, 1, 0);
       }
       break;
     }
